--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,13 @@
 
     <!-- page d\'inscription -->
 
+    <string-array name="status_utilisateur">
+        <item>Enseignant</item>
+        <item>Etudiant</item>
+        <item>Eleve</item>
+        <item>Professionnel</item>
+
+    </string-array>
 
     <!-- page de forum  -->
 
