Integration de meterial design au formulaire d'inscription

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="votre_statut">Votre Statut</string>
 
     <string-array name="labels_array">
+        <item>Votre Statut</item>
         <item>Enseignant</item>
         <item>Encardreur</item>
         <item>Etudiant</item>
