--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,16 @@
     <string name="google_img">google_img</string>
     <string name="se_connecter">Se connecter</string>
     <string name="votre_statut">Votre Statut</string>
+    <string name="edit_page_nom">Nom</string>
+    <string name="edit_page_profession">Profession</string>
+    <string name="edit_page_formation">Formation</string>
+    <string name="edit_page_description">Description</string>
+    <string name="edit_page_valider">Valider</string>
+    <string name="favaris_tab_item_title">"Livre de cuisine "</string>
+    <string name="favaris_tab_item_categorie">Cours</string>
+    <string name="favaris_tab_item_poster_name">Junior Temgoua</string>
+    <string name="detail_page_doc_title">Livre de mathematique</string>
+    <string name="detail_page_doc_description">Modelisation des bases de donnees NoSql , en  plusieurs collection</string>
 
     <string-array name="labels_array">
         <item>Votre Statut</item>
@@ -41,6 +51,40 @@
         <item>Etudiant</item>
         <item>Elève</item>
     </string-array>
+
+
+    <string-array name="spinner_formation">
+        <item>2020</item>
+        <item>2019</item>
+        <item>2018</item>
+        <item>2017</item>
+        <item>2016</item>
+        <item>2015</item>
+        <item>2014</item>
+        <item>2013</item>
+        <item>2012</item>
+        <item>2011</item>
+        <item>2010</item>
+        <item>2009</item>
+        <item>2008</item>
+        <item>2007</item>
+        <item>2006</item>
+        <item>2005</item>
+        <item>2004</item>
+        <item>2003</item>
+        <item>2002</item>
+        <item>2001</item>
+        <item>2000</item>
+    </string-array>
+    <string name="title_activity_product">ProductActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <!-- page de forum  -->
 
