--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,15 @@
     <string name="favaris_tab_item_poster_name">Junior Temgoua</string>
     <string name="detail_page_doc_title">Livre de mathematique</string>
     <string name="detail_page_doc_description">Modelisation des bases de donnees NoSql , en  plusieurs collection</string>
+    <string name="detail_page_doc_poster_name">Junior Temgoua</string>
+    <string name="detail_page_doc_profession">Enseignant de mathematique</string>
+    <string name="text_download">Telecharger</string>
+    <string name="signale_doc">signaler</string>
+    <string name="text_apercu">Apercu du Document</string>
+    <string name="commentaires">commentaires</string>
+    <string name="comment_date">il y\'a 6 jours</string>
+    <string name="text_leave_comment">Laisser un commentaire</string>
+    <string name="text_popup_note">Combien d\'etoiles donner vous a ce document</string>
 
     <string-array name="labels_array">
         <item>Enseignant</item>
