--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">JCCL_Network_Project</string>
     <string name="app_accueil">Accueil</string>
+
+
     <!-- page d'acceuil  -->
     <string name="home_page_user_name">Junior Temgoua</string>
-    <string name="home_page_user_name1">Profils d Encadreurs</string>
     <string name="home_page_profession">Enseignant de mathematique</string>
     <string name="home_page_localisation">Douala</string>
     <string name="home_page_message_no_contain">Douala</string>
@@ -12,16 +13,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name_inscription">Inscription</string>
+
     <!-- page de connexion  -->
 
-    <string-array name="country_codes">
-        <item>Cameroun</item>
-        <item>France</item>
-        <item>Congo</item>
-        <item>Allemagne</item>
-    </string-array>
-    <!-- page d\'inscription -->
     <string name="required">Veuillez remplir tous les champs</string>
+    <!-- page d\'inscription -->
     <string name="hint_name">Nom d\'utilisateur</string>
     <string name="hint_email">Email</string>
     <string name="title_activity_inscription">InscriptionActivity</string>
@@ -30,37 +26,48 @@
     <string name="profession_fili_re">Profession/Filière</string>
     <string name="mot_de_passe">Mot de passe</string>
     <string name="continuer">Continuer</string>
-    <string name="voir_plus">Voir plus</string>
     <string name="other_way_signup">Ou via les réseaux sociaux</string>
     <string name="facebook_image">facebook_image</string>
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
     <string name="google_img">google_img</string>
     <string name="se_connecter">Se connecter</string>
-    <string name="s_abonner">S abonner</string>
-    <string name="telecharger">Telecha*rger</string>
     <string name="votre_statut">Votre Statut</string>
     <string name="edit_page_nom">Nom</string>
     <string name="edit_page_profession">Profession</string>
     <string name="edit_page_formation">Formation</string>
     <string name="edit_page_description">Description</string>
     <string name="edit_page_valider">Valider</string>
+    <string name="favaris_tab_item_title">"Livre de cuisine "</string>
+
+    <string name="favaris_tab_item_categorie">Cours</string>
+    <string name="favaris_tab_item_poster_name">Junior Temgoua</string>
+    <string name="detail_page_doc_title">Livre de mathematique</string>
+    <string name="detail_page_doc_description">Modelisation des bases de donnees NoSql , en  plusieurs collection</string>
     <string name="edit_page_ville">Ville</string>
+
     <string name="edit_page_email">Email</string>
     <string name="connexion_title">Connexion</string>
     <string name="numero_de_telephone">numero de telephone</string>
     <string name="s_inscrire">S\'inscrire</string>
     <string name="code_verification">Code verification</string>
+    <string name="app_Discussion">Discussion</string>
+    <string-array name="country_codes">
+        <item>Cameroun</item>
+        <item>France</item>
+        <item>Congo</item>
+        <item>Allemagne</item>
+    </string-array>
 
     <string-array name="labels_array">
+        <item>Votre Statut</item>
         <item>Enseignant</item>
-
-        <item>Encardreur</item>
-
         <item>Professionnel</item>
         <item>Etudiant</item>
         <item>Elève</item>
     </string-array>
+
+
     <string-array name="spinner_formation">
         <item>2020</item>
         <item>2019</item>
@@ -84,6 +91,10 @@
         <item>2001</item>
         <item>2000</item>
     </string-array>
+
     <!-- page de forum  -->
+
+
     <!-- page de fil de discussion -->
+
 </resources>
