--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,7 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="PdfFretocam">fretocam.pdf</string>
+    <string name="recherche">Recherche....</string>
 
 
     <!-- page de forum  -->
