building the complete project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="name_inscription">Inscription</string>
 
 
-*
+    *
     <!-- page de connexion  -->
     <string name="Entrer_country_code_phone">Selectionner country code et entrez \n votre numero de telephone</string>
     <string name="bienvenu_sur_appname">Bienvenu sur appName</string>
@@ -61,6 +61,36 @@
     <string name="previous">Previous</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="detail_page_doc_poster_name">Junior Temgoua</string>
+
+    <string name="detail_page_doc_profession">Enseignant de mathematique</string>
+    <string name="text_download">Telecharger</string>
+    <string name="signale_doc">signaler</string>
+    <string name="text_apercu">Apercu du Document</string>
+    <string name="commentaires">commentaires</string>
+    <string name="comment_date">il y\'a 6 jours</string>
+    <string name="text_leave_comment">Laisser un commentaire</string>
+    <string name="text_popup_note">Combien d\'etoiles donner vous a ce document</string>
+    <string name="edit_page_ville">Ville</string>
+
+    <string name="edit_page_email">Email</string>
+
+    <string name="connexion_title">Connexion</string>
+    <string name="numero_de_telephone">numero de telephone</string>
+    <string name="s_inscrire">S\'inscrire</string>
+    <string name="code_verification">Code verification</string>
+    <string name="app_Discussion">Discussion</string>
+    <string name="question">En tant que développeur front-end, vous pourrez
+        faire afficher des messages dans la console. Par exemple, les développeurs chez OpenClassrooms
+        font apparaître un message d\'avertissement pour prévenir les potentielles victimes d\'attaque self-XSS,
+        où l\'attaquant convainc la victime à coller du code néfaste dans cette console.</string>
+    <string name="response">On parle souvent de design responsive : il s\'agit d\'une technique de
+        design où l\'apparence d\'une page ou d\'une application dépend de l\'appareil sur lequel on
+        les consulte. On dépendra souvent de la largeur en pixels de la fenêtre de navigateur.</string>
+    <string name="PdfFretocam">fretocam.pdf</string>
+    <string name="recherche">Recherche....</string>
+
+
     <string-array name="country_names">
         <item>Cameroun</item>
         <item>Congo</item>
@@ -71,31 +101,14 @@
         <item>Allemagne</item>
         <item>Suisse</item>
     </string-array>
-
-    <string name="detail_page_doc_poster_name">Junior Temgoua</string>
-    <string name="detail_page_doc_profession">Enseignant de mathematique</string>
-    <string name="text_download">Telecharger</string>
-    <string name="signale_doc">signaler</string>
-    <string name="text_apercu">Apercu du Document</string>
-    <string name="commentaires">commentaires</string>
-    <string name="comment_date">il y\'a 6 jours</string>
-    <string name="text_leave_comment">Laisser un commentaire</string>
-    <string name="text_popup_note">Combien d\'etoiles donner vous a ce document</string>
-
-    <string name="edit_page_ville">Ville</string>
-
-    <string name="edit_page_email">Email</string>
-    <string name="connexion_title">Connexion</string>
-    <string name="numero_de_telephone">numero de telephone</string>
-    <string name="s_inscrire">S\'inscrire</string>
-    <string name="code_verification">Code verification</string>
-    <string name="app_Discussion">Discussion</string>
     <string-array name="country_codes">
         <item>Cameroun</item>
         <item>France</item>
         <item>Congo</item>
         <item>Allemagne</item>
     </string-array>
+
+
     <string-array name="labels_array">
         <item>Votre Statut</item>
         <item>Enseignant</item>
@@ -126,19 +139,6 @@
         <item>2001</item>
         <item>2000</item>
     </string-array>
-
-
-    <string name="question">En tant que développeur front-end, vous pourrez
-        faire afficher des messages dans la console. Par exemple, les développeurs chez OpenClassrooms
-        font apparaître un message d\'avertissement pour prévenir les potentielles victimes d\'attaque self-XSS,
-        où l\'attaquant convainc la victime à coller du code néfaste dans cette console.</string>
-    <string name="response">On parle souvent de design responsive : il s\'agit d\'une technique de
-        design où l\'apparence d\'une page ou d\'une application dépend de l\'appareil sur lequel on
-        les consulte. On dépendra souvent de la largeur en pixels de la fenêtre de navigateur.</string>
-
-
-
-
     <!-- page de forum  -->
 
 
